# code0-definition

./: .gitignore  Cargo.toml  README.md  renovate.json  variant.txt
.github/workflows/: ci.yml  publish-reader.yml  release.yml
cli/: Cargo.toml
cli/src/: formatter.rs  main.rs  table.rs
cli/src/analyser/: diagnostics.rs  mod.rs
cli/src/command/: bundle.rs  definition.rs  download.rs  feature.rs  mod.rs  report.rs  watch.rs
crates/cli/: Cargo.toml
crates/cli/src/: formatter.rs  main.rs  parser.rs  reader.rs  table.rs
crates/cli/src/analyser/: core.rs  data_type.rs  diagnostics.rs  flow_type.rs  function.rs  function_definition.rs  index_identifier.rs  loader.rs  mod.rs  module_configuration_definition.rs  module_definition.rs  runtime_flow_type.rs
crates/cli/src/command/: bundle.rs  definition.rs  download.rs  feature.rs  mod.rs  parse_errors.rs  publish.rs  report.rs  search.rs  search_module.rs  watch.rs
crates/cli/src/diagnostics/: diagnose.rs  kinds.rs  mod.rs  reporter.rs  severity.rs
crates/package/: Cargo.toml
crates/package/src/: lib.rs
crates/package/src/enum/: mod.rs  reader_error.rs
crates/package/src/struct/: feature.rs
crates/parser/: Cargo.toml
definitions/cron/data_type/object/: cron_code.proto.json
definitions/cron/data_type/type/: cron_day_of_month.proto.json  cron_day_of_week.proto.json  cron_hour.proto.json  cron_minute.proto.json  cron_month.proto.json
definitions/cron/data_types/type/: cron_day_of_week.proto.json  cron_month.proto.json
definitions/cron/flow_type/: cron.proto.json
definitions/draco_cron/: module.json
definitions/draco_cron/data_types/type/: cron_hour.proto.json
definitions/draco_cron/flow_types/: cron.proto.json
definitions/draco_cron/runtime_flow_types/: cron.proto.json
definitions/draco_rest/: module.json
definitions/draco_rest/data_types/: rest_adapter_auth_type.proto.json  rest_adapter_auth_value.proto.json  rest_adapter_input.proto.json
definitions/draco_rest/flow_types/: rest.proto.json
definitions/draco_rest/functions/: rest_control_respond.proto.json
definitions/draco_rest/runtime_flow_types/: rest.proto.json
definitions/draco_rest/runtime_functions/: rest_control_respond.proto.json
definitions/http/data_type/: http.header_input.proto.json  http_adapter_input.proto.json
definitions/http/data_type/array/: http_header_map.json  http_header_map.proto.json
definitions/http/data_type/object/: http_adapter_input.proto.json  http_header_entry.proto.json  http_request.json  http_request.proto.json  http_response.json  http_response.proto.json  http_response_object.json
definitions/http/data_type/type/: http_method.proto.json  http_status_code.json  http_status_code.proto.json  http_url.json  http_url.proto.json
definitions/http/flow_type/: http.json  http.proto.json
definitions/rest/data_type/: array.md  object.md  rest.header_input.proto.json  rest_adapter_input.proto.json  type.md
definitions/rest/data_types/: rest_adapter_input.proto.json
definitions/rest/flow_type/: flow_type.md  http.proto.json  rest.json  rest.proto.json
definitions/rest/runtime_definition/: http_control_respond.proto.json  rest_control_respond.proto.json
definitions/standard/data_type/: array.md  node.md  object.md  primitive.md  type.md
definitions/taurus/boolean/: module.json
definitions/taurus/control/: module.json
definitions/taurus/http/: module.json
definitions/taurus/list/: module.json
definitions/taurus/number/: module.json
definitions/taurus/object/: module.json
definitions/taurus/text/: module.json
package/mapper/: package-lock.json  package.json  tsconfig.json  vite.config.ts
package/mapper/src/: index.ts
package/reader/: package-lock.json  package.json  tsconfig.json
package/reader/src/: index.ts  parser.ts
reader/rust/: Cargo.toml
reader/rust/src/: parser.rs  reader.rs
reader/ts/: index.d.ts  index.js  index.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts
reader/ts/src/: index.ts  parser.ts  reader.ts  types.ts
script/: inject-version.sh
scripts/: inject-version.sh
(+471 files in other folders)
