[workspace]
members = ["crates/cli", "crates/package", "crates/parser"]
resolver = "3"

[workspace.package]
version = "0.0.1"
edition = "2024"

[workspace.dependencies]
serde = "1.0.219"
serde_json = "1.0.140"
tucana = { path="../tucana/build/rust" }
clap = "4.5.41"
colored = "3.0"
tabled = "0.20"
notify = "8.0"
reqwest = "0.12.22"
tokio = "1.47.0"
futures = "0.3.31"
zip = "6.0.0"
bytes = "1.10.1"
prost = "0.14.1"

[workspace.dependencies.parser]
path = "crates/parser"