[package]
name = "cli"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
code0-definition-reader = { workspace = true }
tucana = { workspace = true }
colored = { workspace = true }
tabled = { workspace = true }
notify = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
futures = { workspace = true }
zip = { workspace = true }
bytes = { workspace = true }
