[package]
name = "code0-cli"
version = "0.0.0"
edition = "2024"
description = "The cli for managing the Code0-Definitions"
repository = "https://github.com/code0-tech/code0-definitions"
homepage = "https://code0.tech"
license = "Apache-2.0"
readme = "../README.md"

[dependencies]
clap = { workspace = true, features = ["derive"] }
code0-definition-reader = { workspace = true }
tucana = { workspace = true }
colored = { workspace = true }
tabled = { workspace = true }
notify = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
futures = { workspace = true }
zip = { workspace = true }
bytes = { workspace = true }
