[package]
name = "code0-definition-reader"
version = "0.0.0"
edition = "2024"
description = "The rust crate for reading the internal Code0-Definitions"
repository = "https://github.com/code0-tech/code0-definitions"
homepage = "https://code0.tech"
license = "Apache-2.0"
readme = "../../README.md"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tucana = { workspace = true }