[package]
name = "code0-definition-reader"
version = "0.0.0"
edition = "2024"
description = "The rust crate for reading the internal Code0-Definitions"
repository = "https://github.com/code0-tech/code0-definitions"
homepage = "https://code0.tech"
license = "Apache-2.0"
readme = "../../README.md"

[dependencies]
walkdir = "2.5.0"
serde_json = "1.0.145"
serde = "1.0.228"
tucana = {workspace = true}
log = "0.4.28"